# anonvotelib

./: README.md
poksho/: Cargo.toml
sta-rs/adss-rs/: Cargo.toml
sta-rs/ppoprf/: Cargo.toml
sta-rs/sharks/: Cargo.toml
sta-rs/sta-rs/: Cargo.toml
sta-rs/sta-rs/test-utils/: Cargo.toml
sta-rs/strobe-rng/: Cargo.toml
sta-rs/strobe-rs/: Cargo.toml
zkgroup/benches/: zkgroup_benchmarks.rs
zkgroup/src/: api.rs  crypto.rs
zkgroup/src/api/: auth.rs  server_params.rs
zkgroup/src/api/auth/: auth_credential.rs  auth_credential_commitment.rs  auth_credential_presentation.rs  auth_credential_response.rs
zkgroup/src/api/groups/: group_params.rs
zkgroup/src/api/votes/: vote_credential.rs  vote_credential_presentation.rs  vote_credential_request.rs  vote_credential_request_context.rs
zkgroup/src/common/: constants.rs  simple_types.rs
zkgroup/src/crypto/: auth_credential_commitment.rs  auth_credential_request.rs  credentials.rs  proofs.rs  uid_commitment.rs  uid_encryption.rs  uid_struct.rs  vote_credential_request.rs  vote_encryption.rs  vote_struct.rs
zkgroup/tests/: integration_tests.rs
zkvote/: Cargo.toml
zkvote/benches/: zkvote_benchmarks.rs
zkvote/src/: api.rs  crypto.rs
zkvote/src/api/: auth.rs  groups.rs  server_params.rs  votes.rs
zkvote/src/api/auth/: auth_credential_commitment.rs  auth_credential_request.rs  auth_credential_request_context.rs
zkvote/src/api/groups/: group_params.rs
zkvote/src/api/votes/: vote_credential.rs  vote_credential_challenge_request.rs  vote_credential_challenge_request_context.rs  vote_credential_challenge_response.rs  vote_credential_presentation.rs  vote_credential_presentation_v2.rs  vote_credential_request.rs  vote_credential_response.rs
zkvote/src/common/: constants.rs  errors.rs  simple_types.rs
zkvote/src/crypto/: auth_credential_commitment.rs  auth_credential_request.rs  credentials.rs  proofs.rs  signature.rs  uid_encryption.rs  uid_struct.rs  vote_credential_challenge.rs  vote_credential_request.rs
zkvote/tests/: integration_tests.rs
