#
# Copyright 2020-2022 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "poksho"
version = "0.7.0"
authors = ["Signal Messenger LLC"]
edition = "2018"
license = "AGPL-3.0-only"

[dependencies.curve25519-dalek]
features = ["serde"]
version = "3.0.0"
git = "https://github.com/signalapp/curve25519-dalek.git"
branch = "lizard2"

[dependencies]
sha2 = "0.9"
hmac = "0.11"

[dev-dependencies]
hex = "0.4"
