[package]
name = "zkvote"
version = "0.9.0"
authors = ["Signal Messenger LLC", "@thuppaa"]
edition = "2018"
description = "Anonymous voting with zero-knowledge proofs"
license = "AGPL-3.0-only"

[dependencies]
poksho = { path = "../poksho" }

bincode = "1.2.1"
serde = { version = "1.0.106", features = ["derive"] }
sha2 = "0.9.0"
hex = "0.4.0"
aead = "0.4.0"
aes-gcm-siv = "0.10.0"
displaydoc = "0.2"
lazy_static = "1.4.0"
rand = "0.7.3"

# For generation
base64 = { version = "0.13.0", optional = true }

[dependencies.curve25519-dalek]
features = ["serde"]
version = "3.0.0"
git = "https://github.com/signalapp/curve25519-dalek.git"
branch = "lizard2"

# Below is for benchmarking:

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "zkvote_benchmarks"
harness = false

[[bin]]
name = "generate-server-params"
required-features = ["base64", "rand"]
